--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="dark.css" />
+    <link rel="stylesheet" type="text/css" href="light.css" />
   </head>
   <body>
     <h1>Hello Adrian</h1>
