bunch of changes

--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@
     <link rel="stylesheet" type="text/css" href="light.css" />
   </head>
   <body>
-    <a href="about.html">about</a>
-    <p class="message">this is a cool message</p>
-    <h1>Hello Adrian</h1>
+    <a href="index.html">Home</a>
+    <h1>about</h1>
     <h3>Hello Junior</h3>
+    <h5 class="message">about us</h5>
   </body>
 </html>
